--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
 	"autoload":	{
 		"psr-4": {
 			"werx\\Url\\": "src/",
+            "werx\\Url\\Extensions\\": "src/Extensions",
             "werx\\Url\\Tests\\": "tests/"
 		}
 	}
