--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
     	"php": ">= 5.4",
         "rize/uri-template": "0.2.*",
-        "league/plates": "2.*"
+        "league/plates": "2.1.0"
     },
 
     "require-dev": {
