--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ php:
   - 5.5
   - 5.4
   - hhvm
+  - 7.0
 
 before_script:
   - composer self-update
@@ -16,3 +17,4 @@ script:
 matrix:
   allow_failures:
     - php: hhvm
+    - php: 7.0
